--- a/computations.ipynb
+++ b/computations.ipynb
@@ -17,60 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wc_pos\n",
-      "⎡-1.16693608404 ⎤\n",
-      "⎢               ⎥\n",
-      "⎢-0.17988319325 ⎥\n",
-      "⎢               ⎥\n",
-      "⎣0.8513793265916⎦\n",
-      "computed wc_pos\n",
-      "⎡-1.16693608404 ⎤\n",
-      "⎢               ⎥\n",
-      "⎢-0.17988319325 ⎥\n",
-      "⎢               ⎥\n",
-      "⎣0.8513793265916⎦\n",
-      "R0_EE\n",
-      "⎡-0.72397332    -0.67724501   -0.1303720228  -1.3863⎤\n",
-      "⎢                                                   ⎥\n",
-      "⎢ 0.66212275   -0.629614545   -0.4061837552  0.02074⎥\n",
-      "⎢                                                   ⎥\n",
-      "⎢0.1930055228  -0.3804352448   0.904437135   0.90986⎥\n",
-      "⎢                                                   ⎥\n",
-      "⎣     0              0              0           1   ⎦\n",
-      "computed R0_EE\n",
-      "⎡-0.130351822866583  0.677320886192804  -0.724047525651703  -1.38632248431247 \n",
-      "⎢                                                                             \n",
-      "⎢-0.406171566686729  0.629704888305808  0.662190616106131   0.0207605634301578\n",
-      "⎢                                                                             \n",
-      "⎢0.904451801198166   0.380405271744182  0.193025305435915   0.909865994138682 \n",
-      "⎢                                                                             \n",
-      "⎣        0                   0                  0                  1.0        \n",
-      "\n",
-      "⎤\n",
-      "⎥\n",
-      "⎥\n",
-      "⎥\n",
-      "⎥\n",
-      "⎥\n",
-      "⎦\n",
-      "⎡-2.98864652138354 ⎤\n",
-      "⎢                  ⎥\n",
-      "⎢-0.116678838321692⎥\n",
-      "⎢                  ⎥\n",
-      "⎢0.943375365959017 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢-2.22211906958303 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎢ 1.29289199584854 ⎥\n",
-      "⎢                  ⎥\n",
-      "⎣ 2.16232177869822 ⎦\n"
+      "⎡2.16134998032273⎤\n",
+      "⎢                ⎥\n",
+      "⎢-1.4263500012293⎥\n",
+      "⎢                ⎥\n",
+      "⎣1.5510900105138 ⎦\n",
+      "⎡2.02533494891272 ⎤\n",
+      "⎢                 ⎥\n",
+      "⎢0.943523143291935⎥\n",
+      "⎢                 ⎥\n",
+      "⎣1.32683447169753 ⎦\n"
      ]
     }
    ],
@@ -90,25 +53,22 @@
     "                  [0.01735,-0.2179,0.9025,0.371016]],\n",
     "                  [-1.1669,-0.17989,0.85137],\n",
     "                  [-2.99,-0.12,0.94,4.06,1.29,-4.12]],\n",
-    "              4:[],\n",
+    "              4:[[[2.025334948912725, 0.9435231432919353, 1.3268344716975315], [-0.08137147213675607, -0.16717652116184525, 0.10456194492167763, 0.9769838760024222]],[1.74589694978219,0.873373350569398,1.23301330552001],[0,0,0,0,0,0]],\n",
     "              5:[]}\n",
     "\n",
-    "pprint(Matrix(ik.SolveIKCheapest([0]*6, *test_cases[3][0], debug = True)))\n"
+    "# for thetas in ik.SolveIKLimits(*test_cases[4][0]):\n",
+    "#   pprint(thetas)\n",
+    "#   pprint(ik.SolveFK(thetas))\n",
+    "\n",
+    "pprint(ik.SolveFK(next(ik.SolveIK(*test_cases[1][0], debug = False))))\n",
+    "pprint(ik.SolveFK(next(ik.SolveIK(*test_cases[4][0], debug = False))))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.17 ms ± 293 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%timeit ik.SolveIKCheapest([0]*6, *test_cases[3][0])"
    ]
