comments and formatting

--- a/computations.ipynb
+++ b/computations.ipynb
@@ -17,19 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⎡2.16134998032273⎤\n",
-      "⎢                ⎥\n",
-      "⎢-1.4263500012293⎥\n",
-      "⎢                ⎥\n",
-      "⎣1.5510900105138 ⎦\n",
       "⎡2.02533494891272 ⎤\n",
+      "⎢                 ⎥\n",
+      "⎢0.943523143291935⎥\n",
+      "⎢                 ⎥\n",
+      "⎣1.32683447169753 ⎦\n",
+      "⎡2.02533494891273 ⎤\n",
       "⎢                 ⎥\n",
       "⎢0.943523143291935⎥\n",
       "⎢                 ⎥\n",
@@ -60,15 +60,23 @@
     "#   pprint(thetas)\n",
     "#   pprint(ik.SolveFK(thetas))\n",
     "\n",
-    "pprint(ik.SolveFK(next(ik.SolveIK(*test_cases[1][0], debug = False))))\n",
-    "pprint(ik.SolveFK(next(ik.SolveIK(*test_cases[4][0], debug = False))))\n"
+    "for thetas in ik.SolveIK(*test_cases[4][0], debug = False):\n",
+    "  pprint(ik.SolveFK(thetas))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34.6 ms ± 2.55 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "%timeit ik.SolveIKCheapest([0]*6, *test_cases[3][0])"
    ]
