--- a/computations.ipynb
+++ b/computations.ipynb
@@ -12,12 +12,13 @@
     "import ipywidgets as widgets\n",
     "from functools import reduce\n",
     "import numpy as np\n",
-    "from importlib import reload"
+    "from importlib import reload\n",
+    "import kuka_arm.scripts.inverse_kinematics as ik"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,20 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⎡2.5365e-6  -0.0015927     -1.0      -2.153 ⎤\n",
-      "⎢                                           ⎥\n",
-      "⎢0.0015927     -1.0     0.0015927   0.003429⎥\n",
-      "⎢                                           ⎥\n",
-      "⎢  -1.0     -0.0015927  1.7694e-16   1.946  ⎥\n",
-      "⎢                                           ⎥\n",
-      "⎣    0          0           0         1.0   ⎦\n"
+      "⎡-1.3993e-16  -4.5014e-17      1.0        2.153   ⎤\n",
+      "⎢                                                 ⎥\n",
+      "⎢  0.25708     -0.96639    -7.5285e-18  -1.114e-16⎥\n",
+      "⎢                                                 ⎥\n",
+      "⎢  0.96639      0.25708     1.468e-16     1.946   ⎥\n",
+      "⎢                                                 ⎥\n",
+      "⎣     0            0            0          1.0    ⎦\n"
      ]
     }
    ],
@@ -242,13 +243,56 @@
     "quaternion_vals = list(map(float, s[1].split('; ')))\n",
     "ee_pos_vals, quaternion_vals"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IK error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.loadtxt('data/queries_2018_02_02_18_36_22_036.csv', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "errors = []\n",
+    "for row in data:\n",
+    "  ee_pos = np.array(row[0:3])\n",
+    "  quaternion = row[3:7]\n",
+    "  prev_thetas = row[7:13]\n",
+    "  computed_pos = np.array(ik.SolveFK(ik.SolveIKCheapest(prev_thetas, ee_pos, quaternion)))\n",
+    "  computed_pos = computed_pos.reshape((1,-1))\n",
+    "  error = np.sqrt(np.double(np.sum(np.power(ee_pos - computed_pos, 2))))\n",
+    "  errors.append(error)\n",
+    "\n",
+    "print('%.5f'%np.average(errors))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:RoboND]",
+   "display_name": "Python [conda env:urobo]",
    "language": "python",
-   "name": "conda-env-RoboND-py"
+   "name": "conda-env-urobo-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -263,7 +307,60 @@
    "version": "3.5.2"
   },
   "widgets": {
-   "state": {},
+   "state": {
+    "3d107de8c04a4c04b69ad64cf8a3c3c0": {
+     "views": []
+    },
+    "3e2e8c2f53984cd097f748ccc30fe8e0": {
+     "views": []
+    },
+    "426e22fad80344ba9e55b075109ff6d1": {
+     "views": []
+    },
+    "4ed3e8830b83471aae034a79e36b137f": {
+     "views": []
+    },
+    "6d157d9262ec41dcbbd50cf7e9461d71": {
+     "views": []
+    },
+    "77e70a9772064b87b3c1fa073fe63299": {
+     "views": []
+    },
+    "8ec742b7ed504b569201c05b743fcd9b": {
+     "views": []
+    },
+    "8f6ea76f8671479a8d1dc6ef2de81306": {
+     "views": []
+    },
+    "91b16894c6084fe3ac7306bf93f296d9": {
+     "views": []
+    },
+    "b327fd4d203348d3aaacb45ce90af5e7": {
+     "views": []
+    },
+    "b4e57e2ce73a4e93879a343d886110ff": {
+     "views": []
+    },
+    "b8b9cac1492249d4a8802d2b024432aa": {
+     "views": []
+    },
+    "c9782ae4db9f453dbd6d2a2bf0fd969a": {
+     "views": [
+      {
+       "cell_index": 4
+      }
+     ]
+    },
+    "e0a71a8c17254f14951bb63581bb6c3b": {
+     "views": []
+    },
+    "e96f149b879a472e96a7e3db4b85c423": {
+     "views": []
+    },
+    "fafd07365a444bbc9f3f27d885b0fe8f": {
+     "views": []
+    }
+   },
    "version": "1.1.2"
   }
  },
