--- a/computations.ipynb
+++ b/computations.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sympy import symbols, sin, cos, pi, pprint, simplify, atan2, sqrt, atan\n",
+    "from sympy import symbols, sin, cos, pi, pprint, simplify, atan2, sqrt, atan, latex\n",
     "from sympy.matrices import Matrix, Transpose\n",
     "from IPython.display import display\n",
     "import ipywidgets as widgets\n",
@@ -18,18 +18,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "⎡0.463842275389784⎤\n",
+      "⎢                 ⎥\n",
+      "⎢0.235784740278925⎥\n",
+      "⎢                 ⎥\n",
+      "⎢0.237971742976083⎥\n",
+      "⎢                 ⎥\n",
+      "⎢-2.85563659573048⎥\n",
+      "⎢                 ⎥\n",
+      "⎢0.816393249515643⎥\n",
+      "⎢                 ⎥\n",
+      "⎣2.66902072830996 ⎦\n",
       "⎡2.02533494891272 ⎤\n",
       "⎢                 ⎥\n",
       "⎢0.943523143291935⎥\n",
       "⎢                 ⎥\n",
       "⎣1.32683447169753 ⎦\n",
+      "⎡0.463842275389784 ⎤\n",
+      "⎢                  ⎥\n",
+      "⎢0.235784740278925 ⎥\n",
+      "⎢                  ⎥\n",
+      "⎢0.237971742976083 ⎥\n",
+      "⎢                  ⎥\n",
+      "⎢ 0.28595605785931 ⎥\n",
+      "⎢                  ⎥\n",
+      "⎢-0.816393249515643⎥\n",
+      "⎢                  ⎥\n",
+      "⎣-0.472571925279829⎦\n",
+      "⎡2.02533494891272 ⎤\n",
+      "⎢                 ⎥\n",
+      "⎢0.943523143291935⎥\n",
+      "⎢                 ⎥\n",
+      "⎣1.32683447169753 ⎦\n",
+      "⎡ 0.463842275389784 ⎤\n",
+      "⎢                   ⎥\n",
+      "⎢ 2.32018732818821  ⎥\n",
+      "⎢                   ⎥\n",
+      "⎢ -3.45153331672998 ⎥\n",
+      "⎢                   ⎥\n",
+      "⎢ -0.28238492486145 ⎥\n",
+      "⎢                   ⎥\n",
+      "⎢ 0.829575310662926 ⎥\n",
+      "⎢                   ⎥\n",
+      "⎣-0.0804238636533884⎦\n",
+      "⎡2.02533494891273 ⎤\n",
+      "⎢                 ⎥\n",
+      "⎢0.943523143291935⎥\n",
+      "⎢                 ⎥\n",
+      "⎣1.32683447169753 ⎦\n",
+      "⎡0.463842275389784 ⎤\n",
+      "⎢                  ⎥\n",
+      "⎢ 2.32018732818821 ⎥\n",
+      "⎢                  ⎥\n",
+      "⎢-3.45153331672998 ⎥\n",
+      "⎢                  ⎥\n",
+      "⎢ 2.85920772872834 ⎥\n",
+      "⎢                  ⎥\n",
+      "⎢-0.829575310662926⎥\n",
+      "⎢                  ⎥\n",
+      "⎣ 3.0611687899364  ⎦\n",
       "⎡2.02533494891273 ⎤\n",
       "⎢                 ⎥\n",
       "⎢0.943523143291935⎥\n",
@@ -62,6 +116,7 @@
     "#   pprint(ik.SolveFK(thetas))\n",
     "\n",
     "for thetas in ik.SolveIK(*test_cases[4][0], debug = False):\n",
+    "  pprint(thetas)\n",
     "  pprint(ik.SolveFK(thetas))\n"
    ]
   },
@@ -80,6 +135,34 @@
    ],
    "source": [
     "%timeit ik.SolveIKCheapest([0]*6, *test_cases[3][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Latex Printout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, matrix in zip('T0_1,T1_2,T2_3,T3_4,T4_5,T5_6,T6_EE'.split(','), ik.DHMatrices()):\n",
+    "  name = name[0] + '^' + name[1:]\n",
+    "  print(name + ' = ' + latex(matrix) + '\\\\\\\\')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = reduce(lambda acc, M: acc * M, ik.DHMatrices())\n",
+    "latex(simplify(T))"
    ]
   },
   {
@@ -128,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -137,24 +220,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⎡-sin(q₄)⋅sin(q₆) + cos(q₄)⋅cos(q₅)⋅cos(q₆)  -sin(q₄)⋅cos(q₆) - sin(q₆)⋅cos(q₄\n",
-      "⎢                                                                             \n",
-      "⎢             sin(q₅)⋅cos(q₆)                             -sin(q₅)⋅sin(q₆)    \n",
-      "⎢                                                                             \n",
-      "⎣-sin(q₄)⋅cos(q₅)⋅cos(q₆) - sin(q₆)⋅cos(q₄)  sin(q₄)⋅sin(q₆)⋅cos(q₅) - cos(q₄)\n",
-      "\n",
-      ")⋅cos(q₅)  -sin(q₅)⋅cos(q₄)⎤\n",
-      "                           ⎥\n",
-      "               cos(q₅)     ⎥\n",
-      "                           ⎥\n",
-      "⋅cos(q₆)   sin(q₄)⋅sin(q₅) ⎦\n"
+      "\\left[\\begin{matrix}- \\sin{\\left (q_{4} \\right )} \\sin{\\left (q_{6} \\right )} + \\cos{\\left (q_{4} \\right )} \\cos{\\left (q_{5} \\right )} \\cos{\\left (q_{6} \\right )} & - \\sin{\\left (q_{4} \\right )} \\cos{\\left (q_{6} \\right )} - \\sin{\\left (q_{6} \\right )} \\cos{\\left (q_{4} \\right )} \\cos{\\left (q_{5} \\right )} & - \\sin{\\left (q_{5} \\right )} \\cos{\\left (q_{4} \\right )}\\\\\\sin{\\left (q_{5} \\right )} \\cos{\\left (q_{6} \\right )} & - \\sin{\\left (q_{5} \\right )} \\sin{\\left (q_{6} \\right )} & \\cos{\\left (q_{5} \\right )}\\\\- \\sin{\\left (q_{4} \\right )} \\cos{\\left (q_{5} \\right )} \\cos{\\left (q_{6} \\right )} - \\sin{\\left (q_{6} \\right )} \\cos{\\left (q_{4} \\right )} & \\sin{\\left (q_{4} \\right )} \\sin{\\left (q_{6} \\right )} \\cos{\\left (q_{5} \\right )} - \\cos{\\left (q_{4} \\right )} \\cos{\\left (q_{6} \\right )} & \\sin{\\left (q_{4} \\right )} \\sin{\\left (q_{5} \\right )}\\end{matrix}\\right]\n"
      ]
     }
    ],
    "source": [
     "T3_EE = simplify(T3_4*T4_5*T5_6*T6_EE)\n",
     "R3_EE = T3_EE[0:3, 0:3]\n",
-    "pprint(simplify(R3_EE))\n",
+    "print(latex(simplify(R3_EE)))\n",
     "#pprint(simplify(sqrt(R3_EE[0,2]**2 + R3_EE[2, 2]**2)))"
    ]
   },
@@ -253,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -274,6 +347,7 @@
     }
    ],
    "source": [
+    "reload(ik)\n",
     "errors = []\n",
     "for row in data:\n",
     "  ee_pos = np.array(row[0:3])\n",
@@ -286,6 +360,13 @@
     "\n",
     "print('%.5f'%np.average(errors))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
